--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,15 @@
+* {
+	margin: 0;
+	padding: 0;
+}
+/* html,
+body {
+	overflow: hidden;
+} */
+
 .webgl {
-	display: grid;
-	align-items: center;
+	position: fixed;
+	top: 0;
+	left: 0;
+	/* outline: none; */
 }
